src/libqlineedit.h

typedef struct QAction QAction;
typedef struct QCompleter QCompleter;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QLineEdit QLineEdit;
typedef struct QMargins QMargins;
typedef struct QMenu QMenu;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTimerEvent QTimerEvent;
typedef struct QValidator QValidator;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QLineEdit* QLineEdit_new(QWidget* parent);
QLineEdit* QLineEdit_new2();
QLineEdit* QLineEdit_new3(libqt_string param1);
QLineEdit* QLineEdit_new4(libqt_string param1, QWidget* parent);
QMetaObject* QLineEdit_MetaObject(const QLineEdit* self);
void* QLineEdit_Metacast(QLineEdit* self, const char* param1);
int QLineEdit_Metacall(QLineEdit* self, int param1, int param2, void** param3);
libqt_string QLineEdit_Tr(const char* s);
libqt_string QLineEdit_Text(const QLineEdit* self);
libqt_string QLineEdit_DisplayText(const QLineEdit* self);
libqt_string QLineEdit_PlaceholderText(const QLineEdit* self);
void QLineEdit_SetPlaceholderText(QLineEdit* self, libqt_string placeholderText);
int QLineEdit_MaxLength(const QLineEdit* self);
void QLineEdit_SetMaxLength(QLineEdit* self, int maxLength);
void QLineEdit_SetFrame(QLineEdit* self, bool frame);
bool QLineEdit_HasFrame(const QLineEdit* self);
void QLineEdit_SetClearButtonEnabled(QLineEdit* self, bool enable);
bool QLineEdit_IsClearButtonEnabled(const QLineEdit* self);
int QLineEdit_EchoMode(const QLineEdit* self);
void QLineEdit_SetEchoMode(QLineEdit* self, int echoMode);
bool QLineEdit_IsReadOnly(const QLineEdit* self);
void QLineEdit_SetReadOnly(QLineEdit* self, bool readOnly);
void QLineEdit_SetValidator(QLineEdit* self, QValidator* validator);
QValidator* QLineEdit_Validator(const QLineEdit* self);
void QLineEdit_SetCompleter(QLineEdit* self, QCompleter* completer);
QCompleter* QLineEdit_Completer(const QLineEdit* self);
QSize* QLineEdit_SizeHint(const QLineEdit* self);
QSize* QLineEdit_MinimumSizeHint(const QLineEdit* self);
int QLineEdit_CursorPosition(const QLineEdit* self);
void QLineEdit_SetCursorPosition(QLineEdit* self, int cursorPosition);
int QLineEdit_CursorPositionAt(QLineEdit* self, QPoint* pos);
void QLineEdit_SetAlignment(QLineEdit* self, int flag);
int QLineEdit_Alignment(const QLineEdit* self);
void QLineEdit_CursorForward(QLineEdit* self, bool mark);
void QLineEdit_CursorBackward(QLineEdit* self, bool mark);
void QLineEdit_CursorWordForward(QLineEdit* self, bool mark);
void QLineEdit_CursorWordBackward(QLineEdit* self, bool mark);
void QLineEdit_Backspace(QLineEdit* self);
void QLineEdit_Del(QLineEdit* self);
void QLineEdit_Home(QLineEdit* self, bool mark);
void QLineEdit_End(QLineEdit* self, bool mark);
bool QLineEdit_IsModified(const QLineEdit* self);
void QLineEdit_SetModified(QLineEdit* self, bool modified);
void QLineEdit_SetSelection(QLineEdit* self, int param1, int param2);
bool QLineEdit_HasSelectedText(const QLineEdit* self);
libqt_string QLineEdit_SelectedText(const QLineEdit* self);
int QLineEdit_SelectionStart(const QLineEdit* self);
int QLineEdit_SelectionEnd(const QLineEdit* self);
int QLineEdit_SelectionLength(const QLineEdit* self);
bool QLineEdit_IsUndoAvailable(const QLineEdit* self);
bool QLineEdit_IsRedoAvailable(const QLineEdit* self);
void QLineEdit_SetDragEnabled(QLineEdit* self, bool b);
bool QLineEdit_DragEnabled(const QLineEdit* self);
void QLineEdit_SetCursorMoveStyle(QLineEdit* self, int style);
int QLineEdit_CursorMoveStyle(const QLineEdit* self);
libqt_string QLineEdit_InputMask(const QLineEdit* self);
void QLineEdit_SetInputMask(QLineEdit* self, libqt_string inputMask);
bool QLineEdit_HasAcceptableInput(const QLineEdit* self);
void QLineEdit_SetTextMargins(QLineEdit* self, int left, int top, int right, int bottom);
void QLineEdit_SetTextMarginsWithMargins(QLineEdit* self, QMargins* margins);
QMargins* QLineEdit_TextMargins(const QLineEdit* self);
void QLineEdit_AddAction(QLineEdit* self, QAction* action, int position);
QAction* QLineEdit_AddAction2(QLineEdit* self, QIcon* icon, int position);
void QLineEdit_SetText(QLineEdit* self, libqt_string text);
void QLineEdit_Clear(QLineEdit* self);
void QLineEdit_SelectAll(QLineEdit* self);
void QLineEdit_Undo(QLineEdit* self);
void QLineEdit_Redo(QLineEdit* self);
void QLineEdit_Cut(QLineEdit* self);
void QLineEdit_Copy(const QLineEdit* self);
void QLineEdit_Paste(QLineEdit* self);
void QLineEdit_Deselect(QLineEdit* self);
void QLineEdit_Insert(QLineEdit* self, libqt_string param1);
QMenu* QLineEdit_CreateStandardContextMenu(QLineEdit* self);
void QLineEdit_TextChanged(QLineEdit* self, libqt_string param1);
void QLineEdit_TextEdited(QLineEdit* self, libqt_string param1);
void QLineEdit_CursorPositionChanged(QLineEdit* self, int param1, int param2);
void QLineEdit_ReturnPressed(QLineEdit* self);
void QLineEdit_EditingFinished(QLineEdit* self);
void QLineEdit_SelectionChanged(QLineEdit* self);
void QLineEdit_InputRejected(QLineEdit* self);
void QLineEdit_MousePressEvent(QLineEdit* self, QMouseEvent* param1);
void QLineEdit_MouseMoveEvent(QLineEdit* self, QMouseEvent* param1);
void QLineEdit_MouseReleaseEvent(QLineEdit* self, QMouseEvent* param1);
void QLineEdit_MouseDoubleClickEvent(QLineEdit* self, QMouseEvent* param1);
void QLineEdit_KeyPressEvent(QLineEdit* self, QKeyEvent* param1);
void QLineEdit_KeyReleaseEvent(QLineEdit* self, QKeyEvent* param1);
void QLineEdit_FocusInEvent(QLineEdit* self, QFocusEvent* param1);
void QLineEdit_FocusOutEvent(QLineEdit* self, QFocusEvent* param1);
void QLineEdit_PaintEvent(QLineEdit* self, QPaintEvent* param1);
void QLineEdit_DragEnterEvent(QLineEdit* self, QDragEnterEvent* param1);
void QLineEdit_DragMoveEvent(QLineEdit* self, QDragMoveEvent* e);
void QLineEdit_DragLeaveEvent(QLineEdit* self, QDragLeaveEvent* e);
void QLineEdit_DropEvent(QLineEdit* self, QDropEvent* param1);
void QLineEdit_ChangeEvent(QLineEdit* self, QEvent* param1);
void QLineEdit_ContextMenuEvent(QLineEdit* self, QContextMenuEvent* param1);
void QLineEdit_InputMethodEvent(QLineEdit* self, QInputMethodEvent* param1);
void QLineEdit_InitStyleOption(const QLineEdit* self, QStyleOptionFrame* option);
QVariant* QLineEdit_InputMethodQuery(const QLineEdit* self, int param1);
QVariant* QLineEdit_InputMethodQuery2(const QLineEdit* self, int property, QVariant* argument);
void QLineEdit_TimerEvent(QLineEdit* self, QTimerEvent* param1);
bool QLineEdit_Event(QLineEdit* self, QEvent* param1);
libqt_string QLineEdit_Tr2(const char* s, const char* c);
libqt_string QLineEdit_Tr3(const char* s, const char* c, int n);
QRect* QLineEdit_CursorRect(const QLineEdit* self);